The Test commit is done...

--- a/README
+++ b/README
@@ -1,18 +1,1 @@
-===========================
-Babble SMS README
-===========================
-
-+++++++++++++
-Introduction
-+++++++++++++
-This software module is a turnkey application that allows for sending and/or
-receiving of SMS through an easy-to-use website interface. It is designed with
-the look-and-feel of an email account.
-
-Underneath it relies on the SMS Gateway as a transport mechanism for SMS to and
-from the network operators.
-
-A sample of the application can be viewed on the following website:
-http://babblesms.tawi.mobi
-Username: 'demo'
-Password: 'demo'
+Testing git on this project for the first time
